--- a/angular.json
+++ b/angular.json
@@ -64,6 +64,10 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "browserTarget": "move-safe:build",
+            "proxyConfig": "./proxyConfigCode.json"
+          },
           "configurations": {
             "production": {
               "browserTarget": "F1Page:build:production"
