--- a/package.json
+++ b/package.json
@@ -8,9 +8,8 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
-
   "engines": {
-    "node": "18.x.x"
+    "node": "18.17"
   },
   "private": true,
   "dependencies": {
